recommencement de la partie uand on touche les tuyaux

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   <header>
     <h1>Floppy Bird</h1>
     <div class="score-container">
-      <div class="bestScore">
-        <div class="curentScore"></div>
+      <div id="bestScore">
+        <div id="currentScore">
+        </div>
       </div>
     </div>
   </header>
