recommencement de la partie uand on touche les tuyaux

--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
   <header>
     <h1>Floppy Bird</h1>
     <div class="score-container">
-      <div id="bestScore">
-        <div id="currentScore">
-        </div>
-      </div>
+      <div id="bestScore"></div>
+      <div id="currentScore"></div>
     </div>
   </header>
 
